fix spacings in Buttons Panel

--- a/modules/web-war/css/VAADIN/themes/peyto/styles.css
+++ b/modules/web-war/css/VAADIN/themes/peyto/styles.css
@@ -1,2 +1,6 @@
 @import "styles-include.css";
 @import "peyto.css";
+
+#v-dashlayout-details {
+    letter-spacing: 5px;
+}
